--- a/mine/css/demo-all.css
+++ b/mine/css/demo-all.css
@@ -43,17 +43,23 @@ body {
  #main {
     /* these two margins settings are here just to ensure that jsPlumb handles
     margins properly.*/  
+    /*
+    
     margin-top:44px;
-    margin-left: auto;
-    position: relative;
-    font-size: 80%;
     margin-right: auto;
-    width: 850px;
     border-left: 2px solid #456;
     border-right: 2px solid #456;
     border-bottom: 2px solid #456;
+    font-size: 80%;
+    margin-left: auto;
+    */
+    float: left;
+    position: relative;
+    width: 850px;
     height: 600px;
     overflow: hidden;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     background-color:#eaedef;
