--- a/mine/css/basic.css
+++ b/mine/css/basic.css
@@ -1,8 +1,8 @@
 .clonable {
-	margin: 10px;
+	margin-bottom:-1px;
 	float: left;
 	height: 50px;
-	width: 60px;
+	width: 70px;
 	text-align:center;
 	border:1px solid #ccc;
 	background-color: #eaeaea;
@@ -15,7 +15,19 @@
 	margin: 10px;
 }
 
-#buttom_column {
-	width : 80px;
+.buttom_column {
+	margin-left: 10px;
+	margin-right: 5px;
+	width : 70px;
 	float: left;
+	text-align:center;
+	margin-top:10px;
+}
+
+.buttom_row b {
+	line-height: 200%;
+}
+
+.no-close .ui-dialog-titlebar-close {
+  display: none;
 }
